@@ -3,6 +3,15 @@
 	reviewed by: Xavier Queralt
 
 	* flumotion/component/consumers/disker/disker.py:
+	* flumotion/component/consumers/disker/disker.xml:
+	Add a new property to write an index for each file created by
+	the disker
+
+2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/component/consumers/disker/disker.py:
 	* flumotion/test/test_component_disker.py:
 	Add an index class and unit tests
 
